--- a/composer.json
+++ b/composer.json
@@ -1,7 +1,7 @@
 {
   "require": {
-    "longman/telegram-bot": "^0.35.0",
-    "symfony/yaml": "^3.1"
+    "longman/telegram-bot": "*",
+    "symfony/yaml": "^3.3"
   },
   "autoload": {
     "psr-4": {
